fix visibility of phdp section on green card

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -982,7 +982,7 @@ function onPersonPresentChange() {
         adverseReactionSelected();
         jq(".on-art").hide();
         jq('#dlgAdherenceScreening').hide();
-        jq("#tbl-phdp").hide();
+        //jq("#tbl-phdp").hide();
         jq("#tbl-ctx-adherence").hide();
         jq("#tbl-dap-adherence").hide();
         jq(".stability-details").hide();
