Added spacing for HIV test results

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -905,7 +905,7 @@
                             <obs id="expiry-date" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
                             />
                         </td>
-                        <td>HIV Test 1 Results:
+                        <td>&#160;&#160;&#160;&#160;HIV Test 1 Results:
                             <obs id="hiv-test1-result" conceptId="1040AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  style="dropdown" answerLabels="Positive,Negative,Invalid"/>
@@ -948,7 +948,7 @@
                             <obs id="expiry-date2" conceptId="162501AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
                             />
                         </td>
-                        <td>HIV Test 2 Results:
+                        <td>&#160;&#160;&#160;&#160;HIV Test 2 Results:
                             <obs id="hiv-test2-result" conceptId="1326AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  style="dropdown" answerLabels="Positive,Negative,N/A"/>
