MCH PNC Form added validation for prepopulated mode of delivery

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -190,6 +190,7 @@
         }
         if(MODE_OF_DELIVERY !=""){
             getField('delivery-mode.value').val(MODE_OF_DELIVERY);
+            getDeliveryModeChange();
         }else{
             getField('delivery-mode.value').val("");
         }
