--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -55,18 +55,18 @@
 				discontinueDate = new Date(getValue('encounter-date.value')).getTime();
 
 				if(discontinueDate &lt; pbirthdate){
-					getField('encounter-date.error').html('Discontinue date, should not be earlier than Birth date').show();
+					getField('discontinue-date.error').html('Discontinue date, should not be earlier than Birth date').show();
 					return false;
 				}
 				if(discontinueDate &lt; artStartDate){
-					getField('encounter-date.error').html('Discontinue date, should not be earlier than art start date').show();
+					getField('discontinue-date.error').html('Discontinue date, should not be earlier than art start date').show();
 					return false;
 				}
 				if(discontinueDate &lt; enrollmentDate){
-					getField('encounter-date.error').html('Discontinue date, should not be earlier than Enrollment date').show();
+					getField('discontinue-date.error').html('Discontinue date, should not be earlier than Enrollment date').show();
 					return false;
 				}else {
-					getField('encounter-date.error').html('Discontinue date, should not be earlier than Enrollment').hide();
+					getField('discontinue-date.error').html('Discontinue date, should not be earlier than Enrollment').hide();
 
 				}
 
@@ -78,10 +78,17 @@
 	<div class="ke-form-content">
 		<fieldset>
 			<legend>Discontinue HIV Care</legend>
-			<table class="baseline-aligned" width="100%" border="0">
+			<table >
 				<tr>
-					<td>Date:</td>
+					<td>Encounter Date:</td>
 					<td><encounterDate id="encounter-date" showTime="true" /></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Effective discontinuation date</td>
+					<td><obs id= "discontinue-date"conceptId="164384AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /></td>
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
