Updated Current on ART indicators to use <= 30 days as maximum range

--- a/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
@@ -282,6 +282,9 @@
                                     style="radio" id="arv-adherence"
                             />
                         </td>
+                        <td> &#160;&#160;&#160;&#160;&#160;
+                            <span class="value"><recentObs conceptId="1658AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                        </td>
                     </tr>
                 </table>
             </fieldset>
